# how-attention-saves-energy-in-vision

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: behavioral_experiment.yaml  config_contrast_detection.yaml  config_orientation_change_detection.yaml  config_pretrain.yaml  config_vcs_fixed.yaml  config_vcs_flexible.yaml
config/analysis/: analysis.yaml
config/behavioral_dataset_generation/: behavioral_experiment_dataset_generation.yaml
config/dataset/: contrast_detection.yaml  orientation_change_detection.yaml  tiny_imagenet.yaml  vcs.yaml
config/experiment/: contrast_detection.yaml  journal_fixed.yaml  journal_flexible.yaml  orientation_change_detection.yaml  pretrain.yaml
config/model/: baseline.yaml  ean_features.yaml  ean_full.yaml  ean_global.yaml  ean_space.yaml  model.yaml  pretrained.yaml
config/plotting/: plotting.yaml
config/train/: pretrain.yaml  train.yaml
config/visuals/: visuals.yaml
notebooks/: behavioral_results.ipynb  flexible_inference.ipynb
notebooks/contrast_detection/: analyse_contrast_detection.ipynb  debes_fig1_b.csv  debes_fig2_a_1.csv  debes_fig2_a_2.csv  debes_fig2_b_1_1.csv  debes_fig2_b_1_2.csv  debes_fig2_b_1_3.csv  debes_fig2_b_1_4.csv  debes_fig2_b_1_5.csv  debes_fig2_b_2_1.csv  debes_fig2_b_2_2.csv  debes_fig2_b_2_3.csv  debes_fig2_b_2_4.csv  debes_fig2_b_2_5.csv  extract_model_data_contrast_detection.ipynb  mapping_receptive_fields_for_gratings.ipynb
notebooks/orientation_change_detection/: cohen_fig1_c.csv  cohen_fig2_a.csv  (+5 more)
scripts/: generate_behavioral_dataset.py  train.py
what_where/: __init__.py
(+36 files in other folders)
